--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -16,7 +16,9 @@
   <!-- Custom CSS -->
   <link href="assets/libs/chartist/dist/chartist.min.css" rel="stylesheet" />
   <!-- Custom CSS -->
-  <link href="dist/css/style.min.css" rel="stylesheet" />
+ 
+  <link href="dist/css/style.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
