--- a/views/admin/admin-offer.ejs
+++ b/views/admin/admin-offer.ejs
@@ -14,9 +14,9 @@
   <!-- ============================================================== -->
   <div class="page-breadcrumb">
     <div class="row align-items-center">
-      <div class="col-5">
-        <h4 class="page-title">Offer Management</h4>
-        <!-- <div class="d-flex align-items-center">
+        <div class="col-5">
+            <h4 class="page-title">Offer Management</h4>
+            <!-- <div class="d-flex align-items-center">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -24,105 +24,114 @@
                     </ol>
                 </nav>
             </div> -->
-      </div>
-      <div class="col-7">
-      </div>
-      <div class="nk-accordion mt-4" id="accordion-1" role="tablist" aria-multiselectable="true">
-        <div class="panel panel-default btn btn-secondary text-white">
-          <div class="panel-heading text-center" role="tab" id="accordion-1-1-heading">
-            <a class="collapsed" data-toggle="collapse" data-parent="#accordion-1" href="#accordion-1-1" aria-expanded="true" aria-controls="accordion-1-1" style="color:white ;">
-              Add Offer <span class="panel-heading-arrow fa fa-angle-down text-white"></span>
-            </a>
-          </div>
-          <div id="accordion-1-1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="accordion-1-1-heading">
-            <form action="/admin/admin-offer" method="post">
-              <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="d-flex flex-row align-items-center mb-4">
-                  <div class="form-outline flex-fill mb-0">
-                    <label class="form-label" for="form3Example3c">Enter New
-                      Coupon</label>
-                    <input type="text" id="form3Example3c" class="form-control" name="name" required />
-                    <label class="form-label" for="form3Example3c">Enter Type</label>
-                    <input type="text" id="form3Example3c" class="form-control" name="type" required />
-                    <label class="form-label" for="form3Example3c">Enter Discount</label>
-                    <input type="number" id="form3Example3c" class="form-control" name="discount" required />
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="submit" value="Register" class="btn btn-warning btn-lg">Submit</button>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
         </div>
-      </div>
+        <div class="col-7">
+        </div>
+        <div class="nk-accordion mt-4" id="accordion-1" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default btn btn-secondary text-white">
+                <div class="panel-heading text-center" role="tab" id="accordion-1-1-heading">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion-1"
+                        href="#accordion-1-1" aria-expanded="true" aria-controls="accordion-1-1" style="color:white ;">
+                        Add Offer <span class="panel-heading-arrow fa fa-angle-down text-white"></span>
+                    </a>
+                </div>
+                <div id="accordion-1-1" class="panel-collapse collapse" role="tabpanel"
+                    aria-labelledby="accordion-1-1-heading">
+                    <form action="/admin/admin-offer" method="post">
+                        <div class="row d-flex justify-content-center align-items-center h-100">
+                            <div class="d-flex flex-row align-items-center mb-4">
+                                <div class="form-outline flex-fill mb-0">
+                                    <label class="form-label" for="form3Example3c">Enter New
+                                        Coupon</label>
+                                    <input type="text" id="form3Example3c" class="form-control" name="name"
+                                        required />
+                                    <label class="form-label" for="form3Example3c">Enter Type</label>
+                                    <input type="text" id="form3Example3c" class="form-control" name="type"
+                                        required />
+                                    <label class="form-label" for="form3Example3c">Enter Discount</label>
+                                    <input type="number" id="form3Example3c" class="form-control"
+                                        name="discount" required />
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                    <button type="submit" value="Register"
+                                        class="btn btn-warning btn-lg">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <!-- ============================================================== -->
-  <!-- End Bread crumb and right sidebar toggle -->
-  <!-- ============================================================== -->
-  <!-- ============================================================== -->
-  <!-- Container fluid  -->
-  <!-- ============================================================== -->
-  <div class="container-fluid">
+</div>
+<!-- ============================================================== -->
+<!-- End Bread crumb and right sidebar toggle -->
+<!-- ============================================================== -->
+<!-- ============================================================== -->
+<!-- Container fluid  -->
+<!-- ============================================================== -->
+<div class="container-fluid">
     <!-- ============================================================== -->
     <!-- Start Page Content -->
     <!-- ============================================================== -->
     <div class="row">
-      <div class="col-12">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title">Offers</h4>
-            <!-- <h6 class="card-subtitle">Add <code>.table-hover</code> to enable a hover state on table
+        <div class="col-12">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Offers</h4>
+                    <!-- <h6 class="card-subtitle">Add <code>.table-hover</code> to enable a hover state on table
                         rows within a <code>&lt;tbody&gt;</code>.</h6> -->
 
-            <div class="table-responsive">
-              <table class="table table-hover table-striped " style="table-layout: fixed;">
-                <thead>
-                  <tr>
-                    <th scope="col">SI NO</th>
-                    <th scope="col">Offer Name</th>
-                    <th scope="col">Offer Type</th>
-                    <th scope="col">Offer Discount</th>
-                    <th scope="col">Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <% if( offer.length> 0){ %>
-                  <% for(let i=1;i <=offer.length; i++){ %>
-                  <tr>
-                    <th scope="row">
-                      <%= i %>
-                    </th>
-                    <td>
-                      <%= offer[i-1].name %>
-                    </td>
-                    <td>
-                      <%= offer[i-1].type %>
-                    </td>
-                    <td>
-                      <%= offer[i-1].discount %>%
-                    </td>
-                    <td>
-                      <a class="text-danger" href="/admin/delete-offer?id=<%= offer[i-1]._id %>"><i style="color: #ff0000;" class="m-r-5 mdi mdi-border-color"></i>Delete</a><br>
-                    </td>
-                  </tr>
-                  <% }} else { %>
-                  <tr>
-                    <td colspan="5">Category Not Found</td>
-                  </tr>
-                  <% } %>
+                    <div class="table-responsive">
+                        <table class="table table-hover table-striped " style="table-layout: fixed;">
+                            <thead>
+                                <tr>
+                                    <th scope="col">SI NO</th>
+                                    <th scope="col">Offer Name</th>
+                                    <th scope="col">Offer Type</th>
+                                    <th scope="col">Offer Discount</th>
+                                    <th scope="col">Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <% if( offer.length> 0){ %>
+                                    <% for(let i=1;i <=offer.length; i++){ %>
+                                        <tr>
+                                            <th scope="row">
+                                                <%= i %>
+                                            </th>
+                                            <td>
+                                                <%= offer[i-1].name %>
+                                            </td>
+                                            <td>
+                                                <%= offer[i-1].type %>
+                                            </td>
+                                            <td>
+                                                <%= offer[i-1].discount %>%
+                                            </td>
+                                            <td>
+                                                <a class="text-danger"
+                                                    href="/admin/delete-offer?id=<%= offer[i-1]._id %>"><i
+                                                        style="color: #ff0000;"
+                                                        class="m-r-5 mdi mdi-border-color"></i>Delete</a><br>
+                                            </td>
+                                        </tr>
+                                        <% }} else { %>
+                                            <tr>
+                                                <td colspan="5">Category Not Found</td>
+                                            </tr>
+                                            <% } %>
 
-                </tbody>
-              </table>
+                            </tbody>
+                        </table>
+                    </div>
+
+
+                </div>
             </div>
-
-
-          </div>
         </div>
-      </div>
     </div>
 
     <!-- ============================================================== -->
@@ -135,7 +144,7 @@
     <!-- ============================================================== -->
     <!-- End Right sidebar -->
     <!-- ============================================================== -->
-  </div>
+</div>
   <!-- ============================================================== -->
   <!-- End Container fluid  -->
   <!-- ============================================================== -->
