--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -50,72 +50,70 @@
     <!-- Table -->
     <!-- ============================================================== -->
     <div class="row">
-      <div class=" col-12 col-xl-6 ">
-        <div class="bg-light rounded h-100 p-4">`
+      <div class="col-md-6" >
+          <div style="width: 500px;">
+              <input type="hidden" id="category" value="<%= category %>">
+              <input type="hidden" id="count" value="<%= count %>">
+              <h3 class="text-danger text-center">Popular Categories:</h3>
+              <canvas id="myChart"></canvas>
+          </div>
+          <script type="text/javascript" >
+              const count = document.getElementById('count')
+              // console.log('type:',typeof(count.value),' value:',count.value);
+              const countArray = count.value.split(',')
+              // console.log('type:',typeof(countArray),'values,',countArray);
 
-          <input type="hidden" id="category" value="<%= category %>">
-          <input type="hidden" id="count" value="<%= count %>">
-          <h3 class="text-danger text-center">Popular Categories:</h3>
-          <canvas id="myChart"></canvas>
+              const category = document.getElementById('category')
+              // console.log(' value:',category.value);
+              const categoryArray = category.value.split(',')
+              // console.log('values,',categoryArray);
 
-        </div>
-        <script type="text/javascript">
-          const count = document.getElementById('count')
-          // console.log('type:',typeof(count.value),' value:',count.value);
-          const countArray = count.value.split(',')
-          // console.log('type:',typeof(countArray),'values,',countArray);
-
-          const category = document.getElementById('category')
-          // console.log(' value:',category.value);
-          const categoryArray = category.value.split(',')
-          // console.log('values,',categoryArray);
-
-          const ctx = document.getElementById('myChart');
-
-          new Chart(ctx, {
-            type: 'pie',
-            data: {
-              labels: categoryArray,
-              datasets: [{
-                label: 'Orders:',
-                data: countArray,
-                borderWidth: 1
-              }]
-            },
-            options: {
-              scales: {
-                y: {
-                  beginAtZero: true
+              const ctx = document.getElementById('myChart');
+              
+              new Chart(ctx, {
+                type: 'pie',
+                data: {
+                  labels: categoryArray,
+                  datasets: [{
+                    label: 'Orders:',
+                    data: countArray,
+                    borderWidth: 1
+                  }]
+                },
+                options: {
+                  scales: {
+                    y: {
+                      beginAtZero: true
+                    }
+                  }
                 }
-              }
-            }
-          });
-        </script>
+              });
+            </script>                          
       </div>
       <div class="col-md-6">
 
-
-
-      </div>
-
-    </div>
+          
+          
+   </div>
 
   </div>
-  <!-- ============================================================== -->
-  <!-- Table -->
-  <!-- ============================================================== -->
-  <!-- ============================================================== -->
-  <!-- Recent comment and chats -->
-  <!-- ============================================================== -->
 
+  </div>
+    <!-- ============================================================== -->
+    <!-- Table -->
+    <!-- ============================================================== -->
+    <!-- ============================================================== -->
+    <!-- Recent comment and chats -->
+    <!-- ============================================================== -->
+
+    <!-- ============================================================== -->
+    <!-- Recent comment and chats -->
+    <!-- ============================================================== -->
+  </div>
   <!-- ============================================================== -->
-  <!-- Recent comment and chats -->
+  <!-- End Container fluid  -->
   <!-- ============================================================== -->
-</div>
-<!-- ============================================================== -->
-<!-- End Container fluid  -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- footer -->
-<!-- ============================================================== -->
-<%- include("../partials/admin-footer.ejs") -%>
+  <!-- ============================================================== -->
+  <!-- footer -->
+  <!-- ============================================================== -->
+  <%- include("../partials/admin-footer.ejs") -%>
