--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -1,26 +1,26 @@
 <%- include("../partials/adminHeader") -%>
-<!-- ============================================================== -->
-<!-- End Topbar header -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- Left Sidebar - style you can find in sidebar.scss  -->
-<!-- ============================================================== -->
-<%- include("../partials/adminSidebar") -%>
-<!-- ============================================================== -->
-<!-- End Left Sidebar - style you can find in sidebar.scss  -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- Page wrapper  -->
-<!-- ============================================================== -->
-<div class="page-wrapper">
-  <!-- ============================================================== -->
-  <!-- Bread crumb and right sidebar toggle -->
-  <!-- ============================================================== -->
-  <div class="page-breadcrumb">
-    <div class="row align-items-center">
-      <div class="col-5">
-        <h4 class="page-title">Profile Page</h4>
-        <!-- <div class="d-flex align-items-center">
+    <!-- ============================================================== -->
+    <!-- End Topbar header -->
+    <!-- ============================================================== -->
+    <!-- ============================================================== -->
+    <!-- Left Sidebar - style you can find in sidebar.scss  -->
+    <!-- ============================================================== -->
+    <%- include("../partials/adminSidebar") -%>
+        <!-- ============================================================== -->
+        <!-- End Left Sidebar - style you can find in sidebar.scss  -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Page wrapper  -->
+        <!-- ============================================================== -->
+        <div class="page-wrapper">
+            <!-- ============================================================== -->
+            <!-- Bread crumb and right sidebar toggle -->
+            <!-- ============================================================== -->
+            <div class="page-breadcrumb">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <h4 class="page-title">Profile Page</h4>
+                        <!-- <div class="d-flex align-items-center">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -28,120 +28,128 @@
                                 </ol>
                             </nav>
                         </div> -->
-      </div>
+                    </div>
 
-    </div>
-  </div>
-  <!-- ============================================================== -->
-  <!-- End Bread crumb and right sidebar toggle -->
-  <!-- ============================================================== -->
-  <!-- ============================================================== -->
-  <!-- Container fluid  -->
-  <!-- ============================================================== -->
-  <div class="container-fluid">
-    <!-- ============================================================== -->
-    <!-- Start Page Content -->
-    <!-- ============================================================== -->
-    <!-- Row -->
-    <div class="row">
-      <!-- Column -->
-      <div class="col-lg-4 col-xlg-3 col-md-5">
-        <div class="card">
-          <div class="card-body">
-            <center class="m-t-30"> <img src="assets/images/users/5.jpg" class="rounded-circle" width="150" />
-              <h4 class="card-title m-t-10"><%= admin[0].firstname %> <%= admin[0].lastname%></h4>
-              <h6 class="card-subtitle"><%= admin[0].email %></h6>
-              <div class="row text-center justify-content-md-center">
-                <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-people"></i>
-                    <font class="font-medium"><%= admin[0].city%></font>
-                  </a></div>
-                <div class="col-4"><a href="javascript:void(0)" class="link"><i class="icon-picture"></i>
-                    <font class="font-medium"><%= admin[0].country%></font>
-                  </a></div>
-              </div>
-            </center>
-          </div>
-          <div>
-            <hr>
-          </div>
-
-        </div>
-      </div>
-      <!-- Column -->
-      <!-- Column -->
-      <div class="col-lg-8 col-xlg-9 col-md-7">
-        <div class="card">
-          <div class="card-body">
-            <form class="form-horizontal form-material mx-2">
-              <div class="form-group">
-                <label class="col-md-12">Full Name</label>
-                <div class="col-md-12">
-                  <input type="text" placeholder="Full Name" class="form-control form-control-line">
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="example-email" class="col-md-12">Email</label>
-                <div class="col-md-12">
-                  <input type="email" placeholder="Enter Email" class="form-control form-control-line" name="email" id="example-email">
+            </div>
+            <!-- ============================================================== -->
+            <!-- End Bread crumb and right sidebar toggle -->
+            <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- Container fluid  -->
+            <!-- ============================================================== -->
+            <div class="container-fluid">
+                <!-- ============================================================== -->
+                <!-- Start Page Content -->
+                <!-- ============================================================== -->
+                <!-- Row -->
+                <div class="row">
+                    <!-- Column -->
+                    <div class="col-lg-4 col-xlg-3 col-md-5">
+                        <div class="card">
+                            <div class="card-body">
+                                <center class="m-t-30"> <img src="assets/images/users/5.jpg" class="rounded-circle"
+                                        width="150" />
+                                    <h4 class="card-title m-t-10"> Sooraj A S</h4>
+                                    <h6 class="card-subtitle">developer</h6>
+                                    <div class="row text-center justify-content-md-center">
+                                        <div class="col-4"><a href="javascript:void(0)" class="link"><i
+                                                    class="icon-people"></i>
+                                                <font class="font-medium">254</font>
+                                            </a></div>
+                                        <div class="col-4"><a href="javascript:void(0)" class="link"><i
+                                                    class="icon-picture"></i>
+                                                <font class="font-medium">54</font>
+                                            </a></div>
+                                    </div>
+                                </center>
+                            </div>
+                            <div>
+                                <hr>
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <!-- Column -->
+                    <!-- Column -->
+                    <div class="col-lg-8 col-xlg-9 col-md-7">
+                        <div class="card">
+                            <div class="card-body">
+                                <form class="form-horizontal form-material mx-2">
+                                    <div class="form-group">
+                                        <label class="col-md-12">Full Name</label>
+                                        <div class="col-md-12">
+                                            <input type="text" placeholder="Full Name"
+                                                class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="example-email" class="col-md-12">Email</label>
+                                        <div class="col-md-12">
+                                            <input type="email" placeholder="Enter Email"
+                                                class="form-control form-control-line" name="email"
+                                                id="example-email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">Password</label>
+                                        <div class="col-md-12">
+                                            <input type="password" value="password"
+                                                class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">Phone No</label>
+                                        <div class="col-md-12">
+                                            <input type="text" placeholder="123 456 7890"
+                                                class="form-control form-control-line">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-md-12">Message</label>
+                                        <div class="col-md-12">
+                                            <textarea rows="5" class="form-control form-control-line"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-12">Select Country</label>
+                                        <div class="col-sm-12">
+                                            <select class="form-select shadow-none form-control-line">
+                                                <option>London</option>
+                                                <option>India</option>
+                                                <option>Usa</option>
+                                                <option>Canada</option>
+                                                <option>Thailand</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-12">
+                                            <button class="btn btn-success text-white">Update Profile</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Column -->
                 </div>
-              </div>
-              <div class="form-group">
-                <label class="col-md-12">Password</label>
-                <div class="col-md-12">
-                  <input type="password" value="password" class="form-control form-control-line">
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-md-12">Phone No</label>
-                <div class="col-md-12">
-                  <input type="text" placeholder="123 456 7890" class="form-control form-control-line">
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-md-12">Message</label>
-                <div class="col-md-12">
-                  <textarea rows="5" class="form-control form-control-line"></textarea>
-                </div>
-              </div>
-              <div class="form-group">
-                <label class="col-sm-12">Select Country</label>
-                <div class="col-sm-12">
-                  <select class="form-select shadow-none form-control-line">
-                    <option>London</option>
-                    <option>India</option>
-                    <option>Usa</option>
-                    <option>Canada</option>
-                    <option>Thailand</option>
-                  </select>
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="col-sm-12">
-                  <button class="btn btn-success text-white">Update Profile</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      <!-- Column -->
-    </div>
-    <!-- Row -->
-    <!-- ============================================================== -->
-    <!-- End PAge Content -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Right sidebar -->
-    <!-- ============================================================== -->
-    <!-- .right-sidebar -->
-    <!-- ============================================================== -->
-    <!-- End Right sidebar -->
-    <!-- ============================================================== -->
-  </div>
-  <!-- ============================================================== -->
-  <!-- End Container fluid  -->
-  <!-- ============================================================== -->
-  <!-- ============================================================== -->
-  <!-- footer -->
-  <!-- ============================================================== -->
-  <%- include("../partials/admin-footer.ejs") -%>
+                <!-- Row -->
+                <!-- ============================================================== -->
+                <!-- End PAge Content -->
+                <!-- ============================================================== -->
+                <!-- ============================================================== -->
+                <!-- Right sidebar -->
+                <!-- ============================================================== -->
+                <!-- .right-sidebar -->
+                <!-- ============================================================== -->
+                <!-- End Right sidebar -->
+                <!-- ============================================================== -->
+            </div>
+            <!-- ============================================================== -->
+            <!-- End Container fluid  -->
+            <!-- ============================================================== -->
+            <!-- ============================================================== -->
+            <!-- footer -->
+            <!-- ============================================================== -->
+            <%- include("../partials/admin-footer.ejs") -%>
