--- a/views/partials/adminSidebar.ejs
+++ b/views/partials/adminSidebar.ejs
@@ -8,14 +8,10 @@
         <li>
           <!-- User Profile-->
           <div class="user-profile d-flex no-block dropdown m-t-20">
-            <div class="user-pic">
-              <img src="assets/images/users/1.jpg" alt="users" class="rounded-circle" width="40" />
-            </div>
+            <div class="user-pic"><img src="assets/images/users/1.jpg" alt="users" class="rounded-circle" width="40" /></div>
             <div class="user-content hide-menu m-l-10">
               <a href="#" class="" id="Userdd" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <h5 class="m-b-0 user-name font-medium">
-                  Sooraj A S <i class="fa fa-angle-down"></i>
-                </h5>
+                <h5 class="m-b-0 user-name font-medium">Sooraj A S <i class="fa fa-angle-down"></i></h5>
                 <span class="op-5 user-email">soorajas@gmail.com</span>
               </a>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="Userdd">
@@ -36,33 +32,18 @@
                             class="fa fa-plus-square"></i> <span class="hide-menu m-l-5">Create New</span> </a>
                 </li> -->
         <!-- User Profile-->
+        
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/dashboard" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboard</span></a></li>
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/user-page" aria-expanded="false"><i class="mdi mdi-account-circle"></i><span class="hide-menu">User</span></a></li>  
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/products" aria-expanded="false"><i class="mdi mdi-border-all"></i><span class="hide-menu">Products</span></a></li>
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/view-order" aria-expanded="false"><i class="mdi mdi-truck"></i><span class="hide-menu">Orders</span></a></li>
 
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/dashboard" aria-expanded="false"><i class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboard</span></a>
-        </li>
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/user-page" aria-expanded="false"><i class="mdi mdi-account-circle"></i><span class="hide-menu">User</span></a>
-        </li>
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/products" aria-expanded="false"><i class="mdi mdi-border-all"></i><span class="hide-menu">Products</span></a>
-        </li>
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/view-order" aria-expanded="false"><i class="mdi mdi-truck"></i><span class="hide-menu">Orders</span></a>
-        </li>
-
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/admin-category" aria-expanded="false"><i class="mdi mdi-puzzle"></i><span class="hide-menu">Category</span></a>
-        </li>
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/admin-offer" aria-expanded="false"><i class="mdi mdi-puzzle"></i><span class="hide-menu">Offers</span></a>
-        </li>
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/profile" aria-expanded="false"><i class="mdi mdi-account-network"></i><span class="hide-menu">Profile</span></a>
-        </li>
-        <li class="sidebar-item">
-          <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/add-banner" aria-expanded="false"><i class="mdi mdi-account-network"></i><span class="hide-menu">Banner</span></a>
-        </li>
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/admin-category" aria-expanded="false"><i class="mdi mdi-puzzle"></i><span class="hide-menu">Category</span></a></li>
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/admin-offer" aria-expanded="false"><i class="mdi mdi-puzzle"></i><span class="hide-menu">Offers</span></a></li>
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/profile" aria-expanded="false"><i class="mdi mdi-account-network"></i><span class="hide-menu">Profile</span></a></li>
+        <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link" href="/admin/add-banner" aria-expanded="false"><i class="mdi mdi-account-network"></i><span class="hide-menu">Banner</span></a></li>
       </ul>
+
     </nav>
     <!-- End Sidebar navigation -->
   </div>
